--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5514,7 +5514,7 @@ ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Spe
 ROM_gdom:0 "Modify §YRomanian Army§! by\nFactory Output: §G+7.50%§!\n\n"
 ww1_romania.59.t:0 "Carol II Becomes a Army Officer in the Army"
 ww1_romania.59.d:0 "To teach Prince Carol II the importance of Prussian Values, Carol has been commissioned as a officer in the Kings Guard. Carol himself however has proved more interesting in partying, drinking, and chasing after women then doing any job in the army. His performance in drills has been abysmal, and the new job has only increased attention on the young princes personal scandals, which has became a favorite topic of Romanian news papers as of late."
-ww1_romania.59.a:0 "How dare they slander the prince?"
+ww1_romania.59.a:0 "How dare they slander the prince!"
 ww1_romania.59.b:0 "You know, I think it would be for the best if he took a different job"
 ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\n"
 ROM_german_industrial_aid2:0 "German Arms Embargo"
