--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3502,6 +3502,7 @@
  SER_bw2_victory_tt:0 "By completion of this focus we will unlock the rest of the political focuses"
  SER_integrate_SCS:0 "Integrate Croats"
  SER_integrate_montenegro:0 "Podgorica Assembly"
+ SER_integrate_montenegro_desc:0 "With the liberation of Montenegro an assembly has been called Podgorica, to formalise the annexation of the country into Yugoslavia.
  SER_grand_coalition:0 "Legacy of the Grand Coalition"
  SER_grand_coalition_desc:0 "We have been ruled by the coalition government since 1908. The coalition held us together in the face of the enemies."
  SER_concessions_to_coalition:0 "Concessions to Coalition Partners"
@@ -3570,6 +3571,7 @@
  SER_economic_independence:0 "Economic Independence"
  SER_end_the_pig_war:0 "End the Pig War"
  SER_treaty_with_Bulgaria:0 "Treaty with Bulgaria"
+ SER_treaty_with_Bulgaria_desc:0 "while we dont always see eye to eye with the Bulgars, its clear that we will need their help to banish Ottoman rule from the Balkans.
  SER_new_situation:0 "New Political Situation"
  SER_increase_in_party_influence:0 "Support Moderate Radical Faction"
  SER_negotiate_with_opposition:0 "Negotiate with Independent Radicals"
@@ -3675,7 +3677,7 @@
  SER_army_debate_desc:0 "Secret societies and paramilitary groups exist not only in the military but within every branch of government. The question of what should be done with them remains unclear.
  SER_army_modernization:0 "Army Modernization"
  SER_convention_with_romania:0 "Convention with Romania"
- SER_mend_the_officers_relations:0 "Support Supra-Nationalists"
+ SER_mend_the_officers_relations:0 "Support Ultra-Nationalists"
  SER_depoliticize_the_army:0 "Depoliticize the Army"
  SER_depoliticize_the_army_desc:0 "the various secret societies within the army pose a grave threat to our rule. No longer shall we tolerate their bickering."
  SER_unification_of_yugoslavs:0 "Unification of Yugoslavs" 
@@ -8515,7 +8517,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_campanha_civilista:0 "Campanha Civilista"
  BRA_campanha_civilista_desc:0 "Rui Barbosa's campaign was characterized by the close relationship with the population and the holding of intense rallies, which were held on improvised stands of crates. Rui travelled by ship, horse carriage and train through Bahia, São Paulo, Minas Gerais and Rio de Janeiro."
  BRA_reform_the_republic:0 "Reform the Republic"
- BRA_reform_the_republic_desc:0 ""
+ BRA_reform_the_republic_desc:0 "The republic has become an absurd "
  BRA_pact_of_ouro_fino:0 "Pact of Ouro Fino"
  BRA_pact_of_ouro_fino_desc:0 "The Governors of São Paulo and Minas decided to make an alliance the main objective of which is to maintain a president who would guarantee the interest of the oligarchs of these two states."
  BRA_public_education_program:0 "Public Education Program"
@@ -8543,7 +8545,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_new_civil_code:0 "Adopt a Civil Code"
  BRA_new_civil_code_desc:0 "The better and more advanced the laws, the better and more advanced society. One step further on the path of progress"
  BRA_condemn_germany:0 "Condemn Germany"
- BRA_condemn_germany_desc:0 ""
+ BRA_condemn_germany_desc:0 "German agression poses a threat not only to Europe but the world, which has been clearly demonstrated by the U-boat campaign. They must be denounced."
  BRA_destroy_the_buffer_state:0 "Destroy the Buffer State"
  BRA_destroy_the_buffer_state_desc:0 "The Paraguayan War left Paraguay as a buffer state between its larger neighbours. If we want to ascertain our position as Hegemon of South America we must destroy them first."
  BRA_end_the_border_dispute:0 "End the Border Dispute"
@@ -8601,7 +8603,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_rebuild_the_imperial_navy:0 "Rebuild the Imperial Navy"
  BRA_rebuild_the_imperial_navy_desc:0 "The current Brazillian navy is nothing compared to the glory of the imperial navy! We must bring back the naval power that was destroyed by the republican government."
  BRA_join_britain:0 "Join Britain"
- BRA_join_britain_desc:0 ""
+ BRA_join_britain_desc:0 "We have been close to the Entente for quite some time,"
  BRA_suppress_riograndense_federalists:0 "Suppress Riograndense Federalists"
  BRA_suppress_riograndense_federalists_desc:0 "We have reports of federalists forces organizing in Rio Grande do Sul. We must deal with them before it's too late."
  BRA_extend_german_military_training:0 "Extend German Military Training"
@@ -10393,12 +10395,12 @@ skip_focus:0 "§YSkip Focus :§!"
  NWA_help_from_other_factions: "Ask Help From Other White Forces"
  NWA_help_from_other_factions_desc: "In order to better fight the Bolsheviks we should ask other members of the White movement for some assistance in mostly in the form of financial and military aid."
  NWA_we_failed: "Yet Another Defeat"
- NWA_we_failed_desc: "Our attack has been stopped and even with all the preparations we did and the suprise moment we had we weren't able to reconquer the old imperial capital the city of Petrograd. Even though this is decisive defeat for our forces this is not the end and thus we shouldn't give up."
+ NWA_we_failed_desc: "Our attack has been stopped and even with all the preparations we did, as well as the element of suprise moment we failed to reconquer the old imperial capital the city of Petrograd. Even though this is decisive defeat for our forces this is not the end and thus we shouldn't give up."
  NWA_we_took_petrograd: "The Tricolour Flag Once Again Over Petrograd"
- NWA_we_took_petrograd_desc: "Our attack to has been a major success as the city of Petrograd has been reconquered from the Bolsheviks. Both our operation and it's scale were surprises for the Red Army and thus we were able inflict a major blow straight to the face of the Red movement."
+ NWA_we_took_petrograd_desc: "Our attack has been a major success as the city of Petrograd has been retaken from the Bolsheviks. Both our operation and it's scale were surprises for the Red Army and thus we were able inflict a major blow straight to the face of the Red movement."
  NWA_prepare_to_defend: "Fortify the Western Bank of Volkhov River"
- NWA_prepare_to_defend_desc: "After the recent seizure of Petrograd our forces are exhausted so any further attack could lead to some fatal mistake which could lead to the lose of all we have worked hard to achieve. To avoid that fate we have to stop our forces and allow them to rest while preparing a defensive line on the western bank of Volkhov river."
- NWA_prepare_to_defend_tt: "If we control the Western bank of Volkhov river from Lake Ladoga to Velikiye Luki §YLand Forts§! will be constructed along the river"
+ NWA_prepare_to_defend_desc: "After the recent seizure of Petrograd, our forces are exhausted so any further attack could lead to some fatal mistake which could lead to the lose of all we have worked hard to achieve. To avoid that fate we have to stop our forces and allow them to rest while preparing a defensive line on the western bank of Volkhov river."
+ NWA_prepare_to_defend_tt: "If we control the Western bank of the Volkhov river from Lake Ladoga to Velikiye Luki §YLand Forts§! will be constructed along the river"
  NWA_prepare_for_further_attack: "Start Preparations for Further Attacks"
  NWA_prepare_for_further_attack_desc: "Now when we have defeted the Bolsheviks in Petrograd we should keep presuring them so that they can't reorganise and plan a counter attack. The best way to do so is by doing another offensive but this time to the south and even threaten Moscow. But to do that we need to first prepare our troops and logistics."
  NWA_prepare_for_further_attack_tt: "If we control §YNovgorod§! we will gain there a §YSupply Hub§! and railways from §YPskov§! and §YPetrograd§! and if we control §YVelikiye Luki§! we will also gain a railway between it and §YPskov§!"
