--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5524,7 +5524,7 @@ ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division S
 ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+7.50%§!"
 ROM_gdom:0 "Modify §YRomanian Army§! by\nFactory Output: §G+7.50%§!\n\n"
 ROM_alliance_with_the_pcd:0 "PCD in Government"
-ww1_romania.59.t:0 "Prince Carol Becomes a Army Officer"
+ww1_romania.59.t:0 "Prince Carol Becomes an Army Officer"
 ww1_romania.59.d:0 "To teach Prince Carol the importance of Prussian Values, Carol has been commissioned as a officer in the Kings Guard. Carol himself however has proved more interesting in partying, drinking, and chasing after women then doing any job in the army. His performance in drills has been abysmal, and the new job has only increased attention on the young princes personal scandals, which has became a favorite topic of Romanian news papers as of late."
 ww1_romania.59.a:0 "How dare they slander the prince?!"
 ROM_oppose_populism:0 "Oppose Populism"
