--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9342,7 +9342,7 @@ ROM_king_view_disapprove:0 "§ONegative§!, which gives us:\nPolitical Power Gai
 ROM_king_view_neutral:0 "§YNeutral§!, which gives us:\nPolitical Power Gain: §Y+0.0%§!\nStability: §Y+0.00%§!"
 ROM_king_view_approve:0 "§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!"
 ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!"
-ROM_king_view_approve2:0 "§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\nBecause we've completed the focus '§YA Useful Ally§!', we're also receiving:\nPolitical Advisor Cost: §G-25%§!"
+ROM_king_view_aprove2:0 "§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\nBecause we've completed the focus '§YA Useful Ally§!', we're also receiving:\nPolitical Advisor Cost: §G-25%§!"
 ROM_king_view_complete_approve2:0 "§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\nBecause we've completed the focus '§YA Useful Ally§!', we're also receiving:\nPolitical Advisor Cost: §G-25%§!"
 ROM_kings_rotation:0 "King's Rotation"
 ROM_useful_ally_focus_tt:0 "§CModifies§! the effects of the '§YKing's Country§!' mechanic by the following:\n§7Positive§!: Political Advisor Cost: §G-15%§!\n§GVery Positive§!: Political Advisor Cost: §G-25%§!"
