--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15221,3 +15221,27 @@ ww1_BUL_TUR.34.b: "No"
 ww1_BUL_TUR.35.t: "Bulgaria Agrees"
 ww1_BUL_TUR.35.d: "The Bulgarian delegation agrees to Nasim Bey's financial incentives."
 ww1_BUL_TUR.35.a: "Great"
+
+ww1_BUL_TUR.36.t: "Concerns to Share with Nasim Bey: Border Banditry"
+ww1_BUL_TUR.36.d: "Ivan Geshov has expressed concerns regarding the increase in banditry along the border. He suggests that a greater gendarmerie presence may be necessary to maintain order. Alternatively, he could criticize the Ottoman administration, putting pressure on them to resolve the issue."
+ww1_BUL_TUR.36.a: "Propose an Increased Gendarmerie Presence"
+ww1_BUL_TUR.36.b: "Criticize the Young Turk Administration"
+
+ww1_BUL_TUR.37.t: "Concerns Shared by Ivan Geshov: Border Banditry"
+ww1_BUL_TUR.37.d: "Ivan Geshov has formally proposed an increased gendarmerie presence along the border to deal with the growing issue of banditry. The Ottoman administration must now decide how to respond."
+ww1_BUL_TUR.37.a: "We Agree"
+ww1_BUL_TUR.37.b: "We Disagree"
+
+ww1_BUL_TUR.38.t: "Nasim Bey Disagrees"
+ww1_BUL_TUR.38.d: "Nasim Bey disagrees with the suggestion of increasing the gendarmerie presence. He believes that other methods should be explored to address the issue of border banditry."
+ww1_BUL_TUR.38.a: "We'll Move On"
+ww1_BUL_TUR.38.b: "This is Unacceptable"
+
+ww1_BUL_TUR.39.t: "Ivan Geshov Antagonizes Our Administration: Border Banditry"
+ww1_BUL_TUR.39.d: "Ivan Geshov has criticized the Ottoman administration, blaming it for the increasing banditry along the border. His remarks are bold, and they may force us to take a more decisive stance."
+ww1_BUL_TUR.39.a: "He’s Not Wrong"
+ww1_BUL_TUR.39.b: "Rude - Cease Negotiations"
+
+ww1_BUL_TUR.40.t: "Nasim Bey Agrees with Our Criticism: Border Banditry"
+ww1_BUL_TUR.40.d: "Nasim Bey has surprisingly agreed with the Bulgarian criticism of the Ottoman administration’s handling of border banditry. It seems that further discussions will be necessary to address this problem."
+ww1_BUL_TUR.40.a: "Um... Okay"
