--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15155,6 +15155,7 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_BUL_TUR.21.t: "Border Conflict"
  ww1_BUL_TUR.21.d: "Nasim Bey raises the ongoing border conflict with Bulgaria, requesting a response from Geshov."
  ww1_BUL_TUR.21.a: "Push for an Autonomous Macedonia"
+ ww1_BUL_TUR.21.b: "Critisize the Young Turks"
 
  ww1_BUL_TUR.22.t: "Nasim Bey Agrees to De-escalate"
  ww1_BUL_TUR.22.d: "After much deliberation, Nasim Bey has agreed to de-escalate the situation along the Bulgarian-Ottoman border."
@@ -15245,3 +15246,34 @@ ww1_BUL_TUR.39.b: "Rude - Cease Negotiations"
 ww1_BUL_TUR.40.t: "Nasim Bey Agrees with Our Criticism: Border Banditry"
 ww1_BUL_TUR.40.d: "Nasim Bey has surprisingly agreed with the Bulgarian criticism of the Ottoman administration’s handling of border banditry. It seems that further discussions will be necessary to address this problem."
 ww1_BUL_TUR.40.a: "Um... Okay"
+
+ww1_BUL_TUR.41.t: "Geshov Pushes for an Autonomous Macedonia"
+ww1_BUL_TUR.41.d: "Ivan Geshov, representing the Bulgarian government, has pushed for the creation of an autonomous Macedonia to resolve ongoing border conflicts. He argues that autonomy for the region would bring stability and reduce tensions between Bulgaria and the Ottoman Empire."
+ww1_BUL_TUR.41.a: "We'll keep that in mind."
+ww1_BUL_TUR.41.b: "No, that's not an option."
+
+ww1_BUL_TUR.42.t: "Nasim Bey Acknowledges the Request"
+ww1_BUL_TUR.42.d: "Nasim Bey has acknowledged Geshov's proposal for an autonomous Macedonia, but no clear commitment has been made on the issue."
+ww1_BUL_TUR.42.a: "What does this even mean?"
+
+ww1_BUL_TUR.43.t: "Ottoman Response to Autonomous Macedonia"
+ww1_BUL_TUR.43.d: "The Ottoman Empire has ruled out any possibility of creating an autonomous Macedonia at this time, citing concerns about regional stability and territorial integrity."
+ww1_BUL_TUR.43.a: "We'll come back to this later."
+ww1_BUL_TUR.43.b: "Unacceptable! We demand action."
+
+ww1_BUL_TUR.44.t: "Bulgaria Demands an Autonomous Macedonia"
+ww1_BUL_TUR.44.d: "In response to the Ottoman Empire's rejection, Bulgaria is now formally demanding the creation of an autonomous Macedonia. This has become a central point of contention in the ongoing negotiations."
+ww1_BUL_TUR.44.a: "We’ve made ourselves clear!"
+ww1_BUL_TUR.44.b: "Fine, we'll consider it."
+
+ww1_BUL_TUR.45.t: "Geshov Criticizes Ottoman Administration"
+ww1_BUL_TUR.45.d: "Ivan Geshov has sharply criticized the Ottoman administration, accusing them of mishandling the border conflicts. He claims their negligence has worsened tensions in the region, and their refusal to consider autonomy for Macedonia only heightens the problem."
+ww1_BUL_TUR.45.a: "He’s not wrong."
+ww1_BUL_TUR.45.b: "Rude! Cease negotiations."
+
+ww1_BUL_TUR.46.t: "Nasim Bey Agrees with the Criticism"
+ww1_BUL_TUR.46.d: "Nasim Bey has expressed agreement with some of the criticism levied by the Bulgarian delegation. He acknowledges that the Ottoman handling of the border conflicts has been less than ideal, but the future steps remain unclear."
+ww1_BUL_TUR.46.a: "Ok...?"
+
+ww1_BUL_TUR.47.t: "The Ottomans Agree to an Autonomous Macedonia"
+ww1_BUL_TUR.47.d: "In a significant diplomatic turn, the Ottoman Empire has agreed to recognize an autonomous Macedonia. This agreement marks a potential turning point in our relations and may pave the way for further cooperation in the region."
