--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -44,6 +44,8 @@
  POL_send_dowbor_musnicki_to_GGP:0 "Send Dowbor-Muśnicki to Greater Poland"
  POL_send_dowbor_musnicki_to_GGP_desc:0 ""
  POL_second_blue_army_transport:0 "Second Blue Army Transport"
+ POL_russian_peoples_volunteer_army:0 "Russian People's Volunteer Army"
+ POL_3rd_russian_army_in_poland:0 "3rd Russian Army in Poland"
 
 
  ### Tooltips ###
@@ -103,9 +105,13 @@
  ### Intro Screen ###
 
  ### Events ###
- poland_1918_news.1.title:0 "Poland Declares Independence"
- poland_1918_news.1.desc:0 ""As Commander-in-Chief of the Polish Army, I would like to report to the fighting and neutral nations, the existence of the Independent Polish State, covering all the lands of a united Poland". \nIn such words, the Head of State, Józef Piłsudski, today announced to the world that after 123 years of partition, as a result of the end of the Great War and the defeat of Germany, Austria-Hungary and Russia, the independence of Poland became a fact."
- poland_1918_news.1.a:0 "Good luck!"
+ ww1_poland.51.title:0 "Poland Declares Independence"
+ ww1_poland.51.desc:0 ""As Commander-in-Chief of the Polish Army, I would like to report to the fighting and neutral nations, the existence of the Independent Polish State, covering all the lands of a united Poland". \nIn such words, Polish head of state, Józef Piłsudski, today announced to the world that after 123 years of partition, as a result of the end of the Great War and the defeat of Germany, Austria-Hungary and Russia, the independence of Poland became a fact."
+ ww1_poland.51.a:0 "Poland is independent!"
+ ww1_poland.51.b:0 "We may be in trouble"
+ ww1_poland.51.c:0 "Poland is independent!"
+ ww1_poland.51.e:0 "We may be in trouble"
+ ww1_poland.51.f:0 "Reactionary Poland?"
 
  ww1_poland.24.title:0 "Liberation of Lwów"
  ww1_poland.24.desc:0 "Tonight, after long and extremely bloody fights, the Polish forces pushed the Ukrainians out of Lwów. The fights started with the capture of most public buildings in Lwów by former Austro-Hungarian Ukrainian soldiers on November 1 and the proclamation of the creation of the West Ukrainian People's Republic. Polish underground organizations, Polish citizens of Lwów, including the youth, especially students opposed this. It is true that the Ukrainians left the city, but they began the siege as Ukrainian troops surround the area around Lwów. The Polish troops in city are poorly equipped and are threatened by the prospect of famine and breakdown. The city is waiting for relief!"
@@ -162,7 +168,7 @@
  ww1_poland.37.a:0 "Great News"
 
  ww1_poland.38.title:0 "Failed Coup in Lithuania"
- ww1_poland.38.desc:0 ""
+ ww1_poland.38.desc:0 "During an extraordinary session of the Council of State, Lithuanian President Antanas Smetona announced that an attempted coup had been foiled. Lithuanian intelligence had uncovered a plot by the Polish Military Organization (POW) to overthrow the Council of State and the Lithuanian government and replace them with a pro-Polish-oriented cabinet that would agree to reunite with Poland. Fearing that members of the POW had managed to infiltrate the structures of the Lithuanian armed forces, the Lithuanians decided in secret to carry out mass arrests of Poles. Not knowing exactly who was behind the coup plans, the Lithuanians arrested most of the prominent Polish activists in Kaunas. Dozens were arrested on the first night, including Jurgis Aukštuolaitis and 23 Polish officers serving in the Lithuanian army, and General Silvestras Žukauskas, who according to the conspirators was to become the dictator of Lithuania, was removed from his position as commander of the Lithuanian armed forces. Over the next night, the number of arrested Poles rose to two hundred, and a state of siege was declared in Kaunas. The conspirators were arrested, and Lithuania condemned the incident as “a blatant act of aggression on the part of Warsaw.” The incident is considered a new provocation in the already tense situation between the two countries and makes it even more difficult to realize Piłsudski's federation concept."
  ww1_poland.38.a:0 "Not good..."
 
  ww1_poland.39.title:0 "Lithuanian Government Overthrown"
