--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5136,6 +5136,7 @@ ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the
 ROM_complete_the_defense_of_the_southern_carpathians:0 "Complete the Defense of the Southern Carpathians"
 ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
+ROM_invite_fredrick_wilhelm_as_king:0 "Invite Fredrick Wilhelm as King"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_entrench_the_aristocracy:0 "Entrench the Aristocracy"
@@ -5515,6 +5516,7 @@ ROM_homefront:0 "Homefront"
 ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
+ROM_invite_fredrick_wilhelm.tt:0 "§YFredrick William§! will be crowned as king of Romania"
 ROM_attract_war_industry:0 "Modify §YHomefront§! by\nStability: §R-5.00%§!\nFactory Output: §G+7.50%§!"
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
@@ -5541,8 +5543,8 @@ ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Orga
 
 ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
-
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
+
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
 ww1_romania.41.a:0 "These terms aren't that bad"
@@ -7740,6 +7742,7 @@ gala_galaction:0 "Gala Galaction"
  FRA_ww1_british_friendship:0 "British Friendship"
  FRA_ww1_british_friendship_desc:0 "Despite our history, which is opposed by everything, Great Britain remains one of our rare strong allies in the face of German hegemony. We must strengthen our ties with her and secure our alliance."
 ROM_a_pefect_puppet:0 "A Perfect Puppet"
+ROM_not_our_king:0 "Not our King"
 ww1_romania.57.t:0 "Germany Installs Petre Carp as Puppet Leader"
 ww1_romania.57.d:0 "With no formal surrender from the King, Germany has appointed Petre Carp to form a new puppet government in Bucharest. Already, German soldiers are beginning to withdraw as they tranfer controll of the country to the new civilian government. A trustworthy Germophile, Petre Carp should serve Germany's interests in us perfectly"
 ww1_romania.57.a:0 "If you can't beat them, join them!"
