--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5136,7 +5136,7 @@ ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the
 ROM_complete_the_defense_of_the_southern_carpathians:0 "Complete the Defense of the Southern Carpathians"
 ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
-ROM_invite_fredrick_wilhelm_as_king:0 "Invite Fredrick Wilhelm as King"
+ROM_invite_fredrick_wilhelm_as_king:0 "Invite Friedrich Wilhelm as King"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_entrench_the_aristocracy:0 "Entrench the Aristocracy"
@@ -5516,7 +5516,7 @@ ROM_homefront:0 "Homefront"
 ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
-ROM_invite_fredrick_wilhelm.tt:0 "§YFredrick William§! will be crowned as king of Romania"
+ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as king of Romania"
 ROM_attract_war_industry:0 "Modify §YHomefront§! by\nStability: §R-5.00%§!\nFactory Output: §G+7.50%§!"
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
