--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9315,8 +9315,8 @@ FRA_salary_limitation_act:0 "Salary Limitation Act"
 FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
 
 #Romania
-king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
-king_opinion_set_ha.tt:0 "The king's opinion of the current government become §GVery Positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!"
+king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\n£political_power_texticon Daily Political Power Gain: §Y+0.00§!\n£stability_texticon Stability: §Y+0.00%§!"
+king_opinion_set_ha.tt:0 "The king's opinion of the current government become §GVery Positive§!, which gives us:\n£political_power_texticon Political Power Gain: §G+20%§!\n£stability_texticon Stability: §G+12.00%§!"
 ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
 king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
 king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen§!"
