--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5138,7 +5138,7 @@ ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
 ROM_invite_fredrick_wilhelm_as_king:0 "Invite Friedrich Wilhelm as King"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
-ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
+ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\n£boost_popularity_texticon Change in popularity of Democracy: §G+15.00%§!\n£political_power_texticon Political Power: §G+50§!.\n£stability_texticon Gain Base Stability: §G+5.00%§!.\n\n"
 ROM_entrench_the_aristocracy:0 "Entrench the Aristocracy"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 ww1_romania.43.t:0 "Not 'Us vs Them', but 'We'"
@@ -5517,15 +5517,15 @@ ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
 ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as king of Romania"
-ROM_attract_war_industry:0 "Modify §YHomefront§! by\nStability: §R-5.00%§!\nFactory Output: §G+7.50%§!"
-modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
+ROM_attract_war_industry:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-5.00%§!\n£factory_output_texticon Factory Output: §G+7.50%§!"
+modify_rom_army_sup:0 "Modify §YRomanian Army§! by\n £supply_consumption_texticon Supply Consumption: §G-10.00%§!"
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
 ROM_carol2:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §R-1.00%§!"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+7.50%§!"
-ROM_gdom:0 "Modify §YRomanian Army§! by\nFactory Output: §G+7.50%§!\n\n"
+ROM_gdom:0 "Modify §YRomanian Army§! by\n£factory_output_texticon Factory Output: §G+7.50%§!\n\n"
 ROM_alliance_with_the_pcd:0 "PCD in Government"
 ww1_romania.59.t:0 "Prince Carol Becomes an Army Officer"
 ww1_romania.59.d:0 "To teach Prince Carol the importance of Prussian Values, Carol has been commissioned as a officer in the Kings Guard. Carol himself however has proved more interesting in partying, drinking, and chasing after women then doing any job in the army. His performance in drills has been abysmal, and the new job has only increased attention on the young princes personal scandals, which has became a favorite topic of Romanian news papers as of late."
