--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5162,8 +5162,10 @@ ROM_a_man_from_junimea:0 "A Man From Junimea"
 ROM_a_man_from_junimea_desc:0 ""
 ROM_harmonization_of_romanian_society:0 "Harmonisation of Romanian Society"
 ROM_harmonization_of_romanian_society_desc:0 ""
+ROM_junimea_ideas:0 "Junimean Ideas"
 ROM_geniocracy:0 "A Government of Intellectuals"
 ROM_geniocracy_desc:0 ""
+ROM_fuse_nationalism_and_literacy:0 "Fuse Nationalism and Literacy"
 ROM_new_elitism:0 "New Elitism"
 ROM_new_elitism_desc:0 ""
 ROM_put_a_leash_on_carp:0 "Put a Leash on Carp"
@@ -5318,7 +5320,7 @@ ROM_promote_romanian_nationalism:0 "Co-opt Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
 ROM_cement_the_churches_status_desc:0 "Romania is a Christian nation first and foremost. With the churches wide spread influence in Romania, working with them is going to be necessary. We should reach out to them and offer them several concessions for their support."
-ROM_tax_cuts_for_the_poor_idea:0 "Tax Cuts for the Poor"
+ROM_tax_cuts_for_poor_idea:0 "Tax Cuts for the Poor"
 ROM_tax_cuts_for_the_poor:0 "Relieve the Peasants Burden"
 ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both the PNL and the PC was to reduce taxes on peasants. With a mandate, its time to fufill this promise and relieve the financial burden of the peasants."
 ww1_romania.18.g:0 "Petre Carp did a decent job once before..."
