--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5520,6 +5520,8 @@ ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country
 ROM_romanian_army_idea:0 "Romanian Army"
 ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as king of Romania"
 ROM_attract_war_industry:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-5.00%§!\n£factory_output_texticon Factory Output: §G+7.50%§!"
+ROM_full_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-10.00%§!\n£factory_output_texticon Factory Output: §G+10.00%§!\n "
+ROM_stable_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-2.50%§!\n£factory_output_texticon Factory Output: §G+5.00%§!\n "
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\n £supply_consumption_texticon Supply Consumption: §G-10.00%§!"
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
