so sussy can code

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5152,6 +5152,7 @@ ROM_restore_christianity_to_romania:0 "Restore Christianity to Romania"
 ROM_restore_christianity_to_romania_desc:0 ""
 ROM_blurry_the_lines_between_church_and_state:0 "Blur the Lines Between Church and State"
 ROM_blurry_the_lines_between_church_and_state_desc:0 ""
+ROM_autocomplete_19072:0 "This focus will be §Yautocompleted§! if there is a second §RPeasants Revolt§! and the King loses faith in Romanias political parties."
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
@@ -5165,6 +5166,9 @@ ROM_harmonization_of_romanian_society_desc:0 ""
 ROM_junimea_ideas:0 "Junimean Ideas"
 ROM_geniocracy:0 "A Government of Intellectuals"
 ROM_geniocracy_desc:0 ""
+ROM_install_a_royal_dictatorship:0 "The Kings Government"
+ROM_pragmatic_politics:0 "Reunion of the Conservative Parties"
+ROM_the_second_great_disaster:0 "The Second Great Disaster"
 ROM_fuse_nationalism_and_literacy:0 "Fuse Nationalism and Literacy"
 ROM_new_elitism:0 "New Elitism"
 ROM_new_elitism_desc:0 ""
@@ -5511,6 +5515,7 @@ ROM_form_the_fppr_desc:0 ""
 ROM_deal_with_the_liberal_king:0 "Deal With the Liberal King"
 ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power is the king himself. Aligned with the liberals, King Ferdinand clearly cannot be trusted! He would take any opprotunity he could get to depose us for his prefered party, the PNL - or whats left of it. With parliament disbanded, Carp himself will assume responsibility for writing a new constitution, one which will protect Romanian democracy from the king by removing his ability to dismiss governments."
 deal_with_lib_king.tt:0 "Disables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
+house_win.tt:0 "The King will change course, fully endorsing our government and §Rending§! the rotation of power between the §mPCD§!, §lPNL§!, and §cPC§!. He will no longer §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
 ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
 ROM_guide_parliament:0 "Intra-Party Democracy"
 ROM_homefront:0 "Homefront"
