--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -561,6 +561,8 @@
  RAJ_enforce_arms_regulations:0 "Enforce Arms Regulations"
 
  RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
+
+ RAJ_organise_public_works:0 "Organise Public Works"
  
  RAJ_organise_manoeuvres_desc:0 "Organising military manoeuvres along the North-West Frontier will provide our men with much needed experience and motivation."
  decision_cost_CP_15_PP_15:0 "£command_power  §Y15§! £pol_power  §Y15§!"
@@ -583,6 +585,10 @@
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
 
  RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
+
+ fight_against_the_caste_system:0 "Fight Against the Caste System"
+
+ reinforce_the_caste_system:0 "Reinforce the Caste System"
 
  # Social Reforms
  RAJ_social_reforms_category:0 "Social Reforms"
@@ -640,15 +646,6 @@
  RAJ_establish_southborough_franchise_committee:0 "Establish Southborough Franchise Committee"
  RAJ_establish_southborough_franchise_committee_reward:0 "The §YSouthborough Franchise Committee§! will now be established!"
  southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee Established§!"
-
- #Indian Economy
- RAJ_indian_economy_category:0 "Indian Economy"
-
- RAJ_expand_civilian_industry:0 "Expand Civilian Industry"
- RAJ_expand_civilian_industry_desc:0 "Since the introduction of the British administration in the region, the subcontinent has lacked any form of domestic industry, apart from small arms arsenals. Our new programme against stagflation is designed to improve this situation and create new jobs along the way."
- RAJ_organise_public_works:0 "Organise Public Works"
- RAJ_expand_military_industry:0 "Expand Military Industry"
- RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
 
  # Propaganda Campaigns
  RAJ_indian_diplomacy_category:0 "Propaganda Campaigns"
@@ -844,29 +841,6 @@ RAJ_tata_steel_ltd_desc:0 ""
 RAJ_burmah_oil:0 "Burmah Oil"
 RAJ_burmah_oil_desc:0 ""
 
-RAJ_frontier_industry:0 "Frontier Industry"
-RAJ_frontier_industry_desc:0 "A significant proportion of our backcountry provinces remain underdeveloped. While the protection of our borders remains our primary concern, the accelerated industrialisation of these regions may prove advantageous in the near future."
-
-RAJ_develop_the_northwest_frontier:0 "Develop the Northwest Frontier"
-RAJ_develop_the_northwest_frontier_desc:0 "The North-West Frontier has been at the heart of our military doctrine for a number of years. Providing work for the locals by opening up new industries in the region will prevent them from turning to radicalism and deter future collaborators/terrorists."
-
-RAJ_develop_aden_free_trade_port:0 "Develop Aden ''Free Trade'' Port"
-RAJ_develop_aden_free_trade_port_desc:0 ""
-RAJ_aden_province:0 "Aden Province"
-RAJ_aden_province_desc:0 ""
-RAJ_strengthen_the_socotra_garrison:0 "Strengthen the Socotra Garrison"
-RAJ_strengthen_the_socotra_garrison_desc:0 ""
-RAJ_strengthen_the_socotra_garrison_reward:0 "Modify '§YIndian Army§!' by:\nSpecial Forces Capacity Multiplier:§G +5.00%§!"
-RAJ_burma_industrial_capacity:0 "Burma Industrial Capacity"
-RAJ_burma_industrial_capacity_desc:0 ""
-RAJ_defence_of_the_burmese_frontier:0 "Defence of the Burmese Frontier"
-RAJ_defence_of_the_burmese_frontier_desc:0 ""
-RAJ_defence_of_the_burmese_frontier_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defense:§G +5.00%§!"
-RAJ_colonisation_of_the_andaman:0 "Colonisation of the Andaman"
-RAJ_colonisation_of_the_andaman_desc:0 ""
-RAJ_kaalapani:0 "Kālā Pānī"
-RAJ_kaalapani_desc:0 ""
-
 # Army Tree
 RAJ_indian_army_act:0 "Indian Army Act"
 RAJ_indian_army_act_desc:0 ""
@@ -967,6 +941,10 @@ RAJ_deal_with_the_officers_shortage_reward:0 "Modify '§YIndian Army§!' by:\nRe
 RAJ_reorganise_the_chain_of_command:0 "Reorganise the Chain of Command"
 RAJ_reorganise_the_chain_of_command_desc:0 ""
 RAJ_reorganise_the_chain_of_command_reward:0 "Modify '§YIndian Army§!' by:\nDaily Command Power Gain Multiplier:§G +25.00%§!\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!"
+
+RAJ_indian_medical_degrees_act:0 "Indian Medical Degrees Act"
+RAJ_indian_medical_degrees_act_desc:0 ""
+RAJ_indian_medical_degrees_act_reward:0 ""
 
 RAJ_adapt_our_supportives_services:0 "Adapt our Supportives Services"
 RAJ_adapt_our_supportives_services_desc:0 ""
