--- a/localisation/russian/loading_tips_l_russian.yml
+++ b/localisation/russian/loading_tips_l_russian.yml
@@ -23,7 +23,7 @@
  LOADING_TIP_21: "Того, кто попытается помешать моей задаче, я раздавлю.\n- Кайзер Вильгельм II, 1913 г."
  LOADING_TIP_22: "Те, кто убит, не могут жаловаться, раненые отдали бы гораздо больше, чтобы спастись, а раненые считают деньги утешительным призом за то, что они все еще здесь.\n- Роберт Грейвс"
  LOADING_TIP_23: "За все четыре года войны не было ни одной по-настоящему хорошей военной книги. Единственное настоящее письмо, которое пришло во время войны, было в поэзии. Одна из причин этого заключается в том, что поэтов арестовывают не так быстро, как прозаиков.\n- Эрнест Хемингуэй"
- LOADING_TIP_24: "Ты был между дьяволом и глубоким синим морем. Если вы пойдете вперед, вас, скорее всего, расстреляют, если вы вернетесь, вас отдадут под трибунал и расстреляют, так что же, черт возьми, делать? Что вы можете сделать?\n- Уильям Хэй"
+ LOADING_TIP_24: "Вы оказались между дьяволом и глубоким синим морем. Если вы пойдете вперед, вас, скорее всего, расстреляют, если вы вернетесь, вас отдадут под трибунал и расстреляют, так что же, черт возьми, делать? Что вы можете сделать?\n- Уильям Хэй"
  LOADING_TIP_25: "Пулемет - это сильно переоцененное оружие.\n- Фельдмаршал Хейг, 1915 г."
  LOADING_TIP_26: "Сильно нажал справа. Мой центр уступает. Маневрировать невозможно. Ситуация отличная. Я атакую.\n- Фердинанд Фош, сентябрь 1914 г."
  LOADING_TIP_27: "Все зависит от того, есть ли у нас в противниках эти французские ловкачи или эти дерзкие негодяи, англичане. Я предпочитаю англичан. Часто их дерзость можно описать только как глупость.\n- Манфред фон Рихтгофен"
