--- a/localisation/russian/ww1_qing_l_russian.yml
+++ b/localisation/russian/ww1_qing_l_russian.yml
@@ -53,6 +53,8 @@
  QIN_prince_qing_cabinet_desc:0 "Prince Qing shall head the new Imperial Cabinet. We must prove to the people that we are truly reforming."
  QIN_protect_the_dynasty:0 "Protect the Qing Dynasty"
  QIN_protect_the_dynasty_desc:0 "For the Emperor!"
+ QIN_nineteen_articles:0 "Nineteen Articles"
+ QIN_nineteen_articles_desc:0 "The Qing Dynasty is on the verge of a major revolution and the end of the dynasty. This is indeed due to the complacency, corruption, depravity and ignorance of the imperial court and its officials. It may be too late, but we must draw up a constitution and carry out reforms immediately..."
  QIN_continue_qing_new_reforms:0 "Continue Qing New Reforms"
  QIN_continue_qing_new_reforms_desc:0 "With the republicans crushed, we can finish our reforms and legitimize the dynasty."
  QIN_advisory_council:0 "The Advisory Council"
@@ -186,6 +188,9 @@
  QIN_idea_low_legitimacy_4:0 "Diminished Legitimacy"
  QIN_idea_low_legitimacy_5:0 "Fragile Legitimacy"
  QIN_idea_low_legitimacy_6:0 "Questioned Legitimacy"
+ QIN_idea_nineteen_articles:0 "Nineteen Articles"
+ QIN_idea_nineteen_articles_desc:0 "The Nineteen Major Articles of Good Faith on the Constitution is the first constitution of the Qing dynasty, limiting the rights of the emperor to the law, prescribing the monarch as a symbolic head of state who reigns but does not govern, and the political power of the parliament and the prime minister."
+ QIN_idea_nineteen_articles_tt:0 "§RThe Qing dynasty would have to face irreversible consequences if it did not carry out radical constitutional reforms as soon as possible...§!"
 #opinions
  QIN_unfriendly_recall:0 "Unfriendly Recall"
  QIN_claimed_kachin:0 "Claimed Kachin"
@@ -428,8 +433,6 @@
  ww1_qing.99.d:0 "We are slowly losing control of Mongolia, with recent revolutionaries in the region demanding for a republic. Of course, we crushed any dissent, but it is clear that nothing is quelling the growing calls for democracy"
  ww1_qing.99.a:0 "We'll have to solve this soon"
 
- #music
- qing_theme:0 "Cup of Solid Gold"
  #Characters
  QIN_yan_xiu:0 "Yan Xiu"
  QIN_tieliang:0 "Tie Liang"
