--- a/localisation/russian/ww1_modifiers_l_russian.yml
+++ b/localisation/russian/ww1_modifiers_l_russian.yml
@@ -84,4 +84,5 @@
  personal_friendship:0 "Личная дружба"
  kiautschou_malus:0 "Японская оккупация в Шаньдуне"
  RUS_russian_civil_war_raging:0 "Гражданская война в России"
+ cat_armored_cars_research:0 "£research_speed_texticon Скорость исследования бронемашины"
  
