--- a/localisation/russian/ww1_music_l_russian.yml
+++ b/localisation/russian/ww1_music_l_russian.yml
@@ -1,18 +1,16 @@
 ﻿l_russian:
 
- # TGW Soundtracks 
- beiyang_fleet_anthem:0 "Anthem of the Beiyang Fleet"
- tunelihongzhang:0 "Tune of Li Hongzhang"
- pu_tian_yue:0 "Pu Tian Yue                            
+ # TGW Soundtracks                         
  ottoman_theme:0 "Fetih Marşı"
  russian_empire_theme:0 "Прощание Славянки"
- british_theme:0 "It's a Long Way to Tipperary"
+ british_theme:0 "Долог путь до Типперери"
  italian_theme:0 "Битва при Изонцо"
  battle_of_marne:0 "Битва на Марне"
  red_baron:0 "Красный барон"
  flanders_field:0 "На полях Фландрии"
  main_theme_allies:0 "Тема Hearts of Iron"
  motherland:0 "Родина" #Bi-2
- its_a_long_way_to_mukumbura:0 "It's a Long Way to Mukumbura"
+ its_a_long_way_to_mukumbura:0 "Долог путь до Мукумбуры"
  symphony_funebre_et_triomphale:0 "Symphonie funèbre et triomphale"
- radetzky_march:0 "Radetzky March"
+ radetzky_march:0 "Марш Радецкого"
+ qing_theme:0 "Золотой кубок"
