--- a/localisation/russian/ww1_research_l_russian.yml
+++ b/localisation/russian/ww1_research_l_russian.yml
@@ -2,23 +2,34 @@
  
  #INDUSTRY
  early_machine_tools:0 "Ранние станки"
+ early_machine_tools_desc:0 "На наших военных производственных линиях можно использовать различные инструменты для повышения эффективности производства."
  machine_tools2:0 "Станки II"
+ machine_tools2_desc:0 "В военном производстве могут использоваться различные базовые станки, помогающие увеличить производство."
  machine_tools3:0 "Станки III"
+ machine_tools3_desc:0 "Используя улучшенное оборудование на всех наших производственных линиях, мы можем увеличить выпуск военной продукции."
  machine_tools4:0 "Станки IV"
+ machine_tools4_desc:0 "Используя больше конвейеров в наших производственных линиях, мы можем повысить эффективность и производить больше оборудования."
  machine_tools5:0 "Станки V"
+ machine_tools5_desc:0 "Благодаря новому передовому оборудованию мы сможем увеличить военное производство как никогда раньше."
  industrial_complex1:0 "Рассредоточенная промышленность I"
  industrial_complex2:0 "Рассредоточенная промышленность II"
  industrial_complex3:0 "Рассредоточенная промышленность III"
  industrial_complex4:0 "Рассредоточенная промышленность IV"
  fortification_tech:0 "Технологии фортификации"
  fortification1:0 "Фортификация I"
+ fortification1_desc:0 "Выстроив базовые оборонительные позиции, мы сможем легко повысить свой защитный потенциал."
  fortification2:0 "Фортификация II"
+ fortification2_desc:0 "С более продвинутыми оборонительными позициями, такими как защищенные бункеры, врагу будет сложно прорваться."
  fortification3:0 "Фортификация III"
+ fortification3_desc:0 "Благодаря металлическим конструкциям, установленным перед нашими оборонительными позициями, врагу будет трудно продвигаться к нашим укрепленным позициям, которые мы сможем легко защитить."
  anti_air_building1:0 "ПВО I"
  anti_air_building2:0 "ПВО II"
- oil_production1:0 "Добыча нефти I"
- oil_production2:0 "Добыча нефти II"
- oil_production3:0 "Добыча нефти III"
+ oil_production1:0 "Нефтедобыча I"
+ oil_production1_desc:0 "С развитием технологий бурения нефтяных скважин мы можем добывать больше нефти, чем раньше."
+ oil_production2:0 "Нефтедобыча II"
+ oil_production2_desc:0 "Прогресс в геологии помогает нам определить, где находятся самые большие запасы нефти, и мы можем сосредоточить наши усилия в тех местах, где будут расположены более крупные месторождения."
+ oil_production3:0 "Нефтедобыча III"
+ oil_production3_desc:0 "Совершенствование ключевых процессов, связанных с добычей нефти, сделает все наши буровые площадки гораздо более эффективными."
  
  
  early_grenades:0 "Ранние гранаты"
@@ -50,6 +61,13 @@
  electrical_engineering_desc:0 "Используя невидимые электроны, которые есть практически везде, мы можем создавать различные электрические устройства и оборудование, которые выходят за рамки простого физического функционирования."
  mechanical_engineering:0 "Двигатель внутреннего сгорания"
  mechanical_engineering_desc:0 "Газ высокой температуры и давления, образующийся при сжигании топлива и окислителя, выталкивает механические устройства двигателя, такие как поршни. Речь идет о преобразовании этой энергии в импульс." 
+ magneto_ignition:0 "Магнето зажигания"
+ magneto_ignition_desc:0 "Магнето зажигания, также называемое магнето высокого напряжения, - это старый тип системы зажигания, используемый в двигателях с искровым зажиганием, таких как бензиновые двигатели. В ней используется магнето и трансформатор для создания импульсов высокого напряжения для свечей зажигания."
+ coil_ignition:0 "Катушка зажигания"
+ coil_ignition_desc:0 "Катушка трамблера - это тип высоковольтной катушки зажигания, используемой в системе зажигания ранних автомобилей, в первую очередь на «Benz Patent-Motorwagen» и «Ford Model T», выпускавшихся с 1909 года."
+ distributor_based_ignition:0 "Зажигание на базе распределителя"
+ distributor_based_ignition_desc:0 "Усовершенствованная система зажигания была изобретена Чарльзом Кеттерингом в компании «Delco» в США и внедрена в автомобили «Cadillac». Система зажигания Кеттеринга состояла из одной катушки зажигания, прерывателей, конденсатора (для предотвращения возникновения дуги в точках) и распределителя, который направлял электричество от катушки зажигания в нужный цилиндр."
+ 
  chemical_research:0 "Химические исследования"
  chemical_research_desc:0 "В нашем мире существует бесчисленное множество элементов, в отличие от того, что древние люди привыкли считать, что только вода, огонь, воздух и земля - это все в мире. И если мы научимся обращаться с этими вещами, мы сможем создать огромное количество соединений. И здесь есть бесконечные возможности."
  aircraft_engine:0 "Авиационный двигатель"
