--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -536,6 +536,8 @@
  AUS_neutrality_party_long:0 "Christlichsoziale Partei"
  AUS_independent_party:0 "Parteiloser"
  AUS_vaterland_party:0 "Vaterländische Front"
+ AUH_conrad_junta_long:0 "Österreichisch-Ungarischer Militärrat"
+ AUH_conrad_junta:0 "Militärrat"
  
  QIN_neutrality_party:0 "Regency Council" #攝政議會
  QIN_neutrality_party_puyi:0 "House of Aisin-Gioro"
