--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -536,8 +536,8 @@
  AUS_neutrality_party_long:0 "Christlichsoziale Partei"
  AUS_independent_party:0 "Parteiloser"
  AUS_vaterland_party:0 "Vaterländische Front"
- AUH_conrad_junta_long:0 "Österreichisch-Ungarischer Militärrat"
- AUH_conrad_junta:0 "Militärrat"
+ AUH_conrad_junta_party:0 "k.u.k. Generalstab"
+ AUH_conrad_junta_party_long:0 "Kaiserlich und Königlich Generalstab"
  
  QIN_neutrality_party:0 "Regency Council" #攝政議會
  QIN_neutrality_party_puyi:0 "House of Aisin-Gioro"
@@ -969,6 +969,8 @@
  SER_naprednjaci_party_long:0 "Srpska Napredna Stranka"
  SER_democrat_party:0 "Demokrate"
  SER_democrat_party_long:0 "Demokratska Stranka"
+ SER_AUH_party:0 "Militärgeneralgouvernement"
+ SER_AUH_party_long:0 "k.u.k. Militärgeneralgouvernement Serbien"
 
  BUL_neutrality_party:0 "Kŭshtata na Saks-Koburg"
  BUL_neutrality_party_long:0 "Dom na Sakskoburggot·ski i Gota-Kokhari"
