--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -116,17 +116,18 @@
  AUS:0 "Austria"
  AUS_DEF:0 "Austria"
  AUS_ADJ:0 "Austrian"
- AUH_fascism:0 "Österreich-Ungarn"
- AUH_fascism_DEF:0 "Österreich-Ungarn"
- AUH_democratic_DEF:0 "the Austro-Hungarian Monarchy"
- AUH_neutrality_DEF:0 "the Austro-Hungarian Monarchy"
+ AUH_fascism:0 "Österreichische Länder"
+ AUH_fascism_DEF:0 "Österreichische Länder"
+ AUH_democratic:0 "Empire of Austria"
+ AUH_democratic_DEF:0 "the Empire of Austria"
+ AUH_neutrality:0 "Empire of Austria"
+ AUH_neutrality_DEF:0 "the Empire of Austria"
  AUH_communism:0 "Federative Socialist Danubian Republic"
  AUH_communism_DEF:0 "the Worker's Republic of the Danube"
- AUH_fascism_ADJ:0 "Österreichisch-Ungarische"
  AUH_communism_ADJ:0 "Danubian"
- AUH:0 "Austria-Hungary"
- AUH_DEF:0 "Austria-Hungary"
- AUH_ADJ:0 "Austro-Hungarian"
+ AUH:0 "Austria"
+ AUH_DEF:0 "Austria"
+ AUH_ADJ:0 "Austrian"
  LIT_democratic_DEF:0 "the Republic of Lithuania"
  LIT_communism:0 "Lithuanian Soviet Republic"
  LIT_communism_DEF:0 "the Lithuanian Soviet Socialist Republic"
