--- a/localisation/english/replace/replace_strategic_region_names_l_english.yml
+++ b/localisation/english/replace/replace_strategic_region_names_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ STRATEGICREGION_7:0 "South-West Germany"
+ STRATEGICREGION_8:0 "Prussia"
  STRATEGICREGION_10:0 "Sweden"
  STRATEGICREGION_11:0 "Norway"
  STRATEGICREGION_12:1 "Lapland"
@@ -7,9 +9,10 @@
  STRATEGICREGION_15:0 "Southwest China"
  STRATEGICREGION_22:0 "Cisleithania"
  STRATEGICREGION_25:0 "Southern Balkans"
- STRATEGICREGION_27:0 "Pannonian Basin"
+ STRATEGICREGION_27:0 "Transleithania"
  STRATEGICREGION_28:0 "Mesopotamia"
  STRATEGICREGION_35:1 "Patagonia"
+ STRATEGICREGION_37:0 "Baltics"
  STRATEGICREGION_38:0 "Poland"
  STRATEGICREGION_39:0 "Galicia"
  STRATEGICREGION_40:1 "Central Chernozem Region"
