--- a/localisation/russian/replace/replace_victory_points_l_russian.yml
+++ b/localisation/russian/replace/replace_victory_points_l_russian.yml
@@ -158,3 +158,9 @@
  VICTORY_POINTS_11435:0 "Трир"
  VICTORY_POINTS_10412:0 "Линчбург"
  VICTORY_POINTS_11771:0 "Фэнтянь"
+ 
+ 
+ 
+ 
+ 
+ VICTORY_POINTS_11842: "Эдирне"
