--- a/localisation/russian/ww1_units_l_russian.yml
+++ b/localisation/russian/ww1_units_l_russian.yml
@@ -14,10 +14,10 @@
  category_seaplane:0 "Гидросамолет"
  irregular_cavalry:0 "Иррегулярная кавалерия"
  irregular_cavalry_desc:0 "Вооруженная местная кавалерия"
- modifier_army_sub_unit_irregular_cavalry_attack_factor:0 "Атака иррегулярной кавалерии"
- modifier_army_sub_unit_irregular_cavalry_defence_factor:0 "Защита иррегулярной кавалерии"
- modifier_army_sub_unit_irregular_cavalry_max_org_factor:0 "Организация иррегулярной кавалерии"
- modifier_army_sub_unit_irregular_cavalry_speed_factor:0 "Скорость иррегулярной кавалерии"
+ modifier_army_sub_unit_irregular_cavalry_attack_factor:0 "£attack_irregular_cavalry_texticon  Атака иррегулярной кавалерии"
+ modifier_army_sub_unit_irregular_cavalry_defence_factor:0 "£defence_irregular_cavalry_texticon  Защита иррегулярной кавалерии"
+ modifier_army_sub_unit_irregular_cavalry_max_org_factor:0 "£organisation_irregular_cavalry_texticon  Организация иррегулярной кавалерии"
+ modifier_army_sub_unit_irregular_cavalry_speed_factor:0 "£speed_irregular_cavalry_texticon  Скорость иррегулярной кавалерии"
 
  airship:0 "Дирижабль"
  airship_desc:0 "Дирижабли - первые летательные аппараты, способные к управляемому полету. Перспектива использования дирижаблей для разведки была признана в Европе."
@@ -39,4 +39,3 @@
 
  stormtrooper:0 "Штурмовики"
  stormtrooper_desc:0 "Элитная рота прорыва, способная штурмовать города и сильно укрепленные районы."
- 
