--- a/localisation/russian/ww1_scripted_triggers_l_russian.yml
+++ b/localisation/russian/ww1_scripted_triggers_l_russian.yml
@@ -1,33 +1,36 @@
 ﻿l_russian:
- is_balkan_state_tt:0 "Балканское Государство"
- is_greece_a_monarchy_tt:0 "Greece is a §YMonarchy§!."
- is_greece_a_monarchy_tt_NOT:0 "Greece is a §YRepublic§!."
- GRE_has_venizelist_government_tt:0 "Has Venizélist Government"
- GRE_has_venizelist_government_tt_NOT:0 "Does not have Venizélist Government"
- GRE_has_royalist_government_tt:0 "Has Royalist Government"
- GRE_has_royalist_government_tt_NOT:0 "Does not have Royalist Government"
- is_controlled_by_ROOT_or_subject:0 "Controlled by §H[ROOT.GetNameDef]§! or one of their subjects." 
- is_controlled_by_PREV_or_subject:0 "Controlled by §H[PREV.GetNameDef]§! or one of their subjects." 
- is_controlled_by_PREV_or_ally:0 "Controlled by §H[PREV.GetNameDef]§! or one of their allies."
- has_monarchy_tt:0 "§Y[ROOT.GetName]§! is a §YMonarchy§!"
- has_monarchy_tt_NOT:0 "§Y[ROOT.GetName]§! is §RNOT§! a §YMonarchy§!"
- French_Monarch:0 "French Monarch"
+ is_balkan_state_tt:0 "Является Балканским государством"
+ is_greece_a_monarchy_tt:0 "Греция - §Yмонархия§!."
+ is_greece_a_monarchy_tt_NOT:0 "Греция - §Yреспублика§!."
+ GRE_has_venizelist_government_tt:0 "Имеет правительство венизелистов"
+ GRE_has_venizelist_government_tt_NOT:0 "Не имеет правительство венизелистов"
+ GRE_has_royalist_government_tt:0 "Имеет правительство роялистов"
+ GRE_has_royalist_government_tt_NOT:0 "Не имеет правительство роялистов"
+ is_controlled_by_ROOT_or_subject:0 "Контролируется государством §H[ROOT.GetNameDef]§! или одним из его субъектов." 
+ is_controlled_by_PREV_or_subject:0 "Контролируется государством §H[PREV.GetNameDef]§! или одним из его субъектов." 
+ is_controlled_by_PREV_or_ally:0 "Контролируется государством §H[PREV.GetNameDef]§! или одним из его союзников."
+ has_monarchy_tt:0 "§Y[ROOT.GetName]§! - §Yмонархия§!"
+ has_monarchy_tt_NOT:0 "§Y[ROOT.GetName]§! - §RНЕ§! §Yмонархия§!"
+ French_Monarch:0 "Французский монарх"
  VICTORY_POINTS_CAPITAL:0 "[ROOT.Capital.GetCapitalVictoryPointName]"
+ is_microstate_tt:0 "Является микрогосударством"
+ is_islamic_nation_tt:0 "Является исламской страной"
  
  ### Actual Major Power tooltip ###
- is_actual_major_tooltip_base:0 " Is a major world power:"
+ is_actual_major_tooltip_base:0 " Является великой мировой державой:"
  is_actual_major_tooltip_major:0 "\n     [THIS.MajorWorldPower_MajorCheck] $TRIGGER_IS_MAJOR$"
  is_actual_major_tooltip_OR:0 "\n     $TRIGGER_OR_STARTS$"
- is_actual_major_tooltip_seven_largest:0 "\n          [THIS.MajorWorldPower_AmongSevenLargestIndustries] Has one of the world's seventh largest economies"
- is_actual_major_tooltip_average:0 "\n          [THIS.MajorWorldPower_MoreThanSeventyPercentAverage] Has more than §H70%§! of the average industrial capacity of the eight largest economies"
- is_actual_major_tooltip_countries:0 "\n          [THIS.MajorWorldPower_SpecialCase] Is a §HGerman§!, §HFrench§!, §HBritish§!, §HAmerican§!, §HRussian§!, §HOttoman§!, §HAustro-Hungarian§! or §HJapanese§! country"
+ is_actual_major_tooltip_seven_largest:0 "\n          [THIS.MajorWorldPower_AmongSevenLargestIndustries] Имеет одну из седьмых по величине экономик в мире"
+ is_actual_major_tooltip_average:0 "\n          [THIS.MajorWorldPower_MoreThanSeventyPercentAverage] Имеет более §H70%§! среднего промышленного потенциала восьми крупнейших экономик"
+ is_actual_major_tooltip_countries:0 "\n          [THIS.MajorWorldPower_SpecialCase] Является §Hнемецкой§!, §Hфранцузской§!, §Hбританской§!, §Hамериканской§!, §Hрусской§!, §Hосманской§!, §Hавстро-венгерской§! или §Hяпонской§! страной"
  is_actual_major:0 "$is_actual_major_tooltip_base$$is_actual_major_tooltip_major$$is_actual_major_tooltip_OR$$is_actual_major_tooltip_seven_largest$$is_actual_major_tooltip_average$$is_actual_major_tooltip_countries$"
  is_actual_major_without_exceptions:0 "$is_actual_major_tooltip_base$$is_actual_major_tooltip_major$$is_actual_major_tooltip_OR$$is_actual_major_tooltip_seven_largest$$is_actual_major_tooltip_average$"
  
-REQUEST_EXP_FORCE_BLOCKED_TT:0 "§RCannot request forces because their autonomy is too high§!"
+ REQUEST_EXP_FORCE_BLOCKED_TT:0 "§RНельзя запрашивать войска, потому что их автономия слишком высока§!"
 
- RECALL_VOLUNTEERS_TITLE:0 "Recall Intervention"
- RECALL_VOLUNTEERS_ACTION_DESC:0 "We can decide to recall the troops we have sent to other countries."
- RECALL_VOLUNTEERS_TOOLTIP:0 "§Y[This.GetNameWithFlag]§! §Rmust have any troops from us we can recall.§!"
- RECALL_VOLUNTEERS_TOOLTIP_G:0 "§Y[This.GetNameWithFlag]§! must have any troops from us we can recall."
+ RECALL_VOLUNTEERS_TITLE:0 "Отозвать добровольцев"
+ RECALL_VOLUNTEERS_ACTION_DESC:0 "Мы можем принять решение об отзыве войск, которые мы отправили в другие страны."
+ RECALL_VOLUNTEERS_TOOLTIP:0 "Государство §Y[This.GetNameWithFlag]§! §Rдолжно располагать войсками, которые мы можем отозвать.§!"
+ RECALL_VOLUNTEERS_TOOLTIP_G:0 "Государство §Y[This.GetNameWithFlag]§! должно располагать войсками, которые мы можем отозвать."
+ 
  
