--- a/localisation/russian/ww1_war_l_russian.yml
+++ b/localisation/russian/ww1_war_l_russian.yml
@@ -1,7 +1,7 @@
 ﻿l_russian:
  BROTHERS_WAR_NAME:0 "Братская война"
- brothers_war:0 "Братская война (Фокус)"
- brothers_war_desc:0 "Аннексировать (Фокус)"
+ brothers_war:0 "Братская война (фокус)"
+ brothers_war_desc:0 "Аннексировать (фокус)"
  WAR_NAME_SER_TUR:0 "Балканская война"
  WAR_NAME_BUL_TUR:0 "Балканская война"
  WAR_NAME_GRE_TUR:0 "Балканская война"
@@ -9,8 +9,10 @@
  WAR_NAME_BUL_SER:0 "Балканская война"
  WAR_NAME_ENG_SOM:0 "Кампания в Сомалиленде"
  WAR_NAME_ITA_SOM:0 "Кампания в Сомалиленде"
- WAR_NAME_ENG_LBA:0 "Кампания Сенусси"
- WAR_NAME_ITA_LBA:0 "Кампания Сенусси"
+ WAR_NAME_SOM_ENG:0 "Война дервишей"
+ WAR_NAME_SOM_ITA:0 "Война дервишей"
+ WAR_NAME_ENG_LBA:0 "Сенусийская кампания"
+ WAR_NAME_ITA_LBA:0 "Сенусийская кампания"
  WAR_NAME_ASR_TUR:0 "Восстание Асира"
  WAR_NAME_SOV_RUS:0 "Гражданская война в России"
  WAR_NAME_RUS_SOV:0 "Гражданская война в России"
@@ -48,6 +50,7 @@
  WAR_NAME_FRA_CHA:0 "Завоевание Вадаи"
  WAR_TAKE_CLAIM_NAME_ITA_TUR:0 "Итало-Турецкая война"
  CIVIL_WAR_NAME_MEX:0 "Мексиканская революция"
+ CIVIL_WAR_NAME_RUS:0 "Гражданская война в России"
  
  # CHINESE CIVIL WARS
  WAR_NAME_CHI_QIN:0 "Синьхайская революция"
@@ -86,4 +89,3 @@
  WAR_NAME_ZHC_GDC:0 "Южная экспедиция"
  WAR_NAME_FNG_GDC:0 "Южная экспедиция"
  WAR_NAME_ANC_GDC:0 "Южная экспедиция"
- 
