--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15147,6 +15147,7 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_BUL_TUR.19.t: "Cease Negotiations"
  ww1_BUL_TUR.19.d: "The negotiations have come to an end. Both sides leave the table with unresolved tensions."
  ww1_BUL_TUR.19.a: "Understood"
+ ww1_BUL_TUR.19.b: "Re-Annex Macedonia"
  
  ww1_BUL_TUR.20.t: "De-escalation Agreed"
  ww1_BUL_TUR.20.d: "Both sides have agreed to de-escalate the situation, preventing further military build-up along the border."
@@ -15277,3 +15278,21 @@ ww1_BUL_TUR.46.a: "Ok...?"
 
 ww1_BUL_TUR.47.t: "The Ottomans Agree to an Autonomous Macedonia"
 ww1_BUL_TUR.47.d: "In a significant diplomatic turn, the Ottoman Empire has agreed to recognize an autonomous Macedonia. This agreement marks a potential turning point in our relations and may pave the way for further cooperation in the region."
+
+ww1_BUL_TUR.48.t: "Concerns of the Young Turk's 'Ottomanization'"
+ww1_BUL_TUR.48.d: "The Young Turks' policies of 'Ottomanization' have raised concerns among our leadership. We must address these issues."
+ww1_BUL_TUR.48.a: "Express Our Concerns
+
+ww1_BUL_TUR.49.t: "Geshov Expresses Concerns"
+ww1_BUL_TUR.49.d: "Ivan Geshov has expressed his concerns regarding our policies of 'Ottomanization.' We need to decide how to respond."
+ww1_BUL_TUR.49.a: "They're Overreacting"
+ww1_BUL_TUR.49.b: "Is Autonomous Macedonia Not Enough!?"
+
+ww1_BUL_TUR.50.t: "Asim Bey Acknowledges Our Concerns"
+ww1_BUL_TUR.50.d: "Asim Bey recognizes our concerns regarding the 'Ottomanization' policy. However, the question remains if any action will be taken."
+ww1_BUL_TUR.50.a: "But Will They Do Anything?"
+
+ww1_BUL_TUR.51.t: "Asim Bey Criticizes Our Lack of Contentment"
+ww1_BUL_TUR.51.d: "Asim Bey has criticized our administration's dissatisfaction with the status of Autonomous Macedonia. His words cut deep."
+ww1_BUL_TUR.51.a: "Rude"
+ww1_BUL_TUR.51.b: "Cease Negotiations"
